# seis-ee

./: .dockerignore  .env-template  .flake8  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  Dockerfile  README.md  arch.md  docker-compose.ci.yaml  docker-compose.override.yaml  docker-compose.yaml  ee.py  index.py  index_test.py  mount-project.sh  pyproject.toml  radixconfig.yaml  requested-times-pri.csv  runbook.md  send-ew-event-mail.sh
.github/workflows/: build.yaml  main.yaml  testing.yml
app/: .behaverc  decimate.py  event_listener.py  exceptions.py  init.sh  mseed_converter.py  seis_ee.py  settings.py  streamer.py  transfer.py  utils.py
app/classes/: event.py  stream_file.py
app/readers/: segd.py  su_header.py
app/services/: az_files_service.py  blob_service.py  database.py  queue_service.py
app/test_data/grane/: grane-test.sgd
app/test_data/snorre/: snorre-test.sgd
docs/: earthworm_service.md  hnet_server.md  servers.md
infrastructure/: crontab  ringserver-equinor.service  ringserver-nnsn.service  slink-nnsn.service  slink-nnsn2.service
infrastructure/earthworm/: crontab  diskscript.sh  earthworm.service  email-seis-event.service  seiscomp.service  send-ew-event-mail.sh
infrastructure/hnet-client/: check_if_port_available.sh  create_azure_file_mount.sh  crontab  diskscript.sh  ringserver-nnsn.service  slink-nnsn.service  slink-nnsn2.service  slink-norsar.service
mseed_converter/: main.cpp
seis_ee/: config.py  copy_files.py  decimate.py  file_finder.py  index.py  index_perf.py  seis_ee.py  streamer.py  test.py  transfer.py  utils.py
seis_ee/classes/: stream_file.py
seis_ee/extractors/: decimate.py  segd.py  seismic_unix.py
seis_ee/find_files/: filename.py  grane.py  oseberg.py  su_header.py
seis_ee/readers/: segd.py  su_header.py
seis_ee/services/: database.py
seis_ee/streamer/: __init__.py  db_service.py  stream_file.py  transfer.py
test_data/: input.csv
tests/: find_files_test.py  path_to_datetime_test.py
(+13 files in other folders)
