[tool.poetry]
name = "event_extractor"
version = "0.1.0"
description = "Extract seismic data files from given time ranges"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
segyio = "^1.9.1"
numpy = "^1.19.1"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
