[tool.poetry]
name = "event_extractor"
version = "0.1.0"
description = "Extract seismic data files from given time ranges"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.2"
numpy = "^1.19.1"
pandas = "^1.1.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
azure-storage-blob = "^12.7.1"
azure-storage-file-share = "^12.4.1"
azure-storage-queue = "^12.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
python-dotenv = "^0.15.0"
behave = "^1.2.6"
pre-commit = "^2.10.1"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
